--- a/package.json
+++ b/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "react-credit-card-ui",
+  "name": "cardify",
   "version": "0.1.0",
-  "description": "A React component for displaying credit card information with animations.",
+  "description": "A modern React component for displaying credit card information with animations and customizations.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "prepare": "npm run build",
+    "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "lint": "node lint.js",
+    "lint:fix": "npx eslint src --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}'",
+    "prepublishOnly": "yarn lint && yarn test && yarn build"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/*.{css,scss,md,json}": [
+      "prettier --write"
+    ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-username/react-credit-card-ui.git"
+    "url": "git+https://github.com/talaslioglua/cardify.git"
   },
   "keywords": [
     "react",
     "credit-card",
     "ui",
-    "component"
+    "component",
+    "payment",
+    "form",
+    "card",
+    "typescript"
   ],
-  "author": "Your Name",
+  "author": "Ahmet Talaslıoğlu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/your-username/react-credit-card-ui/issues"
+    "url": "https://github.com/talaslioglua/cardify/issues"
   },
-  "homepage": "https://github.com/your-username/react-credit-card-ui#readme",
+  "homepage": "https://github.com/talaslioglua/cardify#readme",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
@@ -48,10 +66,21 @@
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rollup": "^2.75.0",
