--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cardify",
+  "name": "react-credit-card-ui",
   "version": "0.1.0",
   "description": "A modern React component for displaying credit card information with animations and customizations.",
   "main": "dist/index.js",
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/talaslioglua/cardify.git"
+    "url": "git+https://github.com/talaslioglua/react-credit-card-ui.git"
   },
   "keywords": [
     "react",
@@ -47,9 +47,9 @@
   "author": "Ahmet Talaslıoğlu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/talaslioglua/cardify/issues"
+    "url": "https://github.com/talaslioglua/react-credit-card-ui/issues"
   },
-  "homepage": "https://github.com/talaslioglua/cardify#readme",
+  "homepage": "https://github.com/talaslioglua/react-credit-card-ui#readme",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
