--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-credit-card-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A modern React component for displaying credit card information with animations and customizations.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -44,7 +44,7 @@
     "card",
     "typescript"
   ],
-  "author": "Ahmet Talaslıoğlu",
+  "author": "Alperen Talaslıoğlu",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/iamalperen/react-credit-card-ui/issues"
@@ -55,39 +55,39 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@babel/preset-env": "^7.18.0",
-    "@babel/preset-react": "^7.18.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
-    "@typescript-eslint/parser": "^8.29.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "husky": "^9.1.7",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.5.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "rollup": "^2.75.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "ts-jest": "^29.3.1",
-    "typescript": "^4.7.0"
+    "@babel/core": "7.22.5",
+    "@babel/preset-env": "7.22.5",
+    "@babel/preset-react": "7.22.5",
+    "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-commonjs": "22.0.0",
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-terser": "0.4.4",
+    "@testing-library/jest-dom": "6.4.5",
+    "@testing-library/react": "15.0.7",
+    "@types/jest": "29.5.14",
+    "@types/react": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "8.29.1",
+    "@typescript-eslint/parser": "8.29.1",
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "husky": "9.1.7",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "lint-staged": "15.5.0",
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "rollup": "2.75.0",
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-postcss": "4.0.2",
+    "rollup-plugin-typescript2": "0.36.0",
+    "ts-jest": "29.3.1",
+    "typescript": "4.9.5"
   }
 }
