--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,15 @@
-name: Publish to NPM
+name: Publish to NPM and Deploy to Vercel
 
 on:
   release:
     types: [created]
+  push:
+    branches: [main]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: github.event_name == 'release' && github.event.action == 'created'
     steps:
       - uses: actions/checkout@v4
       
@@ -32,4 +35,38 @@ jobs:
       - name: Publish to NPM
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  deploy-example:
+    runs-on: ubuntu-latest
+    needs: [publish]
+    if: github.event_name == 'release' && github.event.action == 'created'
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'yarn'
+      
+      - name: Install dependencies in example
+        run: |
+          cd example
+          # Ensure we're using the published package
+          yarn add react-credit-card-ui@latest
+          yarn install
+      
+      - name: Build example project
+        run: |
+          cd example
+          yarn build
+          
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          working-directory: ./example
+          vercel-args: '--prod' 
